--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -126,13 +126,11 @@
                 <a href="/productExample"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
                                                alt="treecreate" id="treecreateLogo" class="filterColor">
                 </a>
-                <a href="https://www.facebook.com/treecreate.dk" target="popup"
-                   onclick="window.open('https://www.facebook.com/treecreate.dk', 'name')">
+                <a target="popup" onclick="window.open('https://www.facebook.com/treecreate.dk', 'name')">
                     <img th:src="@{~/img/logos/facebookBlackLogo.svg}" alt="facebook" id="facebookIcon"
                          class="icon filterColor">
                 </a>
-                <a href="https://www.instagram.com/treecreate.dk/" target="popup"
-                   onclick="window.open('https://www.instagram.com/tree_create/','name')">
+                <a target="popup" onclick="window.open('https://www.instagram.com/treecreate.dk/','names')">
                     <img th:src="@{~/img/logos/instagramBlackLogo.svg}" alt="instagram" id="instagramIcon"
                          class="icon filterColor">
                 </a>
