--- a/src/main/resources/static/styles/popup.css
+++ b/src/main/resources/static/styles/popup.css
@@ -25,10 +25,12 @@
 {
     visibility: hidden;
     width: 20vw;
-    background-color: black;
-    color: #fff;
+    background-color: white;
+    box-shadow: 1px 4px 6px rgba(0,0,0,0.25);
+    border: 3px solid var(--actionColor);
+    color: black;
     text-align: center;
-    padding: 5px 0;
+    padding: 5px;
     border-radius: 6px;
     position: absolute;
     top: 100%;
@@ -52,9 +54,9 @@
     bottom: 100%;
     left: 50%;
     margin-left: -5px;
-    border-width: 5px;
+    border-width: 9px;
     border-style: solid;
-    border-color: transparent transparent black transparent;
+    border-color: transparent transparent var(--actionColor) transparent;
 }
 
 /* Add animation (fade in the popup) */
