--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -123,7 +123,7 @@
     <section id="navbarContainer">
         <div id="navBar">
             <div id="navBar-left">
-                <a href="/productExample"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
+                <a style="margin-left:25px;" href="/productExample"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
                                                alt="treecreate" id="treecreateLogo" class="filterColor">
                 </a>
                 <a target="popup" onclick="window.open('https://www.facebook.com/treecreate.dk', 'name')">
