--- a/src/main/resources/templates/payment/fail.html
+++ b/src/main/resources/templates/payment/fail.html
@@ -5,6 +5,66 @@
     <title>Title</title>
 </head>
 <body>
-fail
+<div>
+    <p>
+        Hi Jan Bogoryja-Zakrzewski,
+        <br><br>
+        Just to let you know - we've received your order #40, and it is not being processed:
+    </p>
+    <h1>[Order #40] (2020-11-08)</h1>
+    <table style="border-spacing: 0;">
+        <tr style="width: 60vw; margin: 0 18vw">
+            <th style="width: 18vw;border: 1px lightgrey solid; padding: 1vh 1vw;">Product</th>
+            <th style="width: 18vw;border: 1px lightgrey solid; padding: 1vh 1vw;">Quantity</th>
+            <th style="width: 18vw;border: 1px lightgrey solid; padding: 1vh 1vw;">price</th>
+        </tr>
+        <tr style="width: 60vw; margin: 0 18vw;">
+            <td style="width: 18vw;border: 1px lightgrey solid; padding: 1vh 1vw; text-align: left">My Friends</td>
+            <td style="width: 18vw;border: 1px lightgrey solid; padding: 1vh 1vw; text-align: center">69</td>
+            <td style="width: 18vw;border: 1px lightgrey solid; padding: 1vh 1vw; text-align: center">1234kr</td>
+        </tr>
+    </table>
+    <table style="border-spacing: 0">
+        <tr style="width: 60vw; margin: 0 18vw;">
+            <td style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw">Subtotal</td>
+            <td style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw">1234kr</td>
+        </tr>
+        <tr>
+            <td style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw">Shipping:</td>
+            <td style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw">Free delivery | Estimated Delivery time: 2-3 weeks</td>
+        </tr>
+        <tr>
+            <td style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw">Total:</td>
+            <td style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw">1234</td>
+        </tr>
+    </table>
+
+    <br><br>
+
+    <table style="border-spacing: 0">
+        <tr style="width: 60vw; margin: 0 18vw;">
+            <th style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw">Billing Address</th>
+            <th style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw">Shipping Address</th>
+        </tr>
+        <tr>
+            <td style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw; line-height: 18px">
+                Teodor Jonasson<br>
+                Hillerogade 69,3 <br>
+                2200 Copenhagen <br>
+                Denmark <br>
+                29182314 <br>
+                yeet@yeet.dk
+            </td>
+            <td style="width: 28vw;border: 1px lightgrey solid; padding: 1vh 1vw; line-height: 18px">
+                Teodor Jonasson<br>
+                Hillerogade 69,3 <br>
+                2200 Copenhagen <br>
+                Denmark <br>
+            </td>
+        </tr>
+    </table>
+
+
+</div>
 </body>
 </html>
