--- a/src/main/resources/static/styles/familyTreeAddToBasket.css
+++ b/src/main/resources/static/styles/familyTreeAddToBasket.css
@@ -26,20 +26,21 @@
 
 #addToBasketBackBtn
 {
+    text-align: center;
     margin: 1vh;
     padding: 0.5vh;
+    width: 100px;
     background-color: var(--actionColor);
     border: none;
+    color: white;
     border-radius: 5px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
 }
 
 #addToBasketBackBtn:hover
 {
-
-    margin: 0.75vh;
-    padding: 0.75vh;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.75);
+    box-shadow: none;
+    transform:scale(0.9);
     cursor: pointer;
 }
 
@@ -92,7 +93,6 @@
 {
     font-size: var(--fontSubtitle);
     min-width: 100px;
-    width: 10vw;
 }
 
 #priceLabel
@@ -224,15 +224,18 @@
     width: 15vw;
     margin: 1vw;
     background-color: #28C553;
+    color: white;
+    font-weight: 900;
     border: none;
     border-radius: 12px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
 }
 
 #addToBasketButton:hover
 {
+    transform:scale(0.9);
+    box-shadow: none;
 
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
 }
 
 #addToBasketFooter
