--- a/src/main/resources/static/styles/treeCollection.css
+++ b/src/main/resources/static/styles/treeCollection.css
@@ -80,10 +80,11 @@
     border: none;
     background-color: var(--actionColor);
     color: white;
-    filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0.5));
+    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.25));
 }
 
 .collectionInfoBtn:hover
 {
-    filter: drop-shadow(0 0 3px rgba(0, 0, 0, 1));
+    transform:scale(0.9);
+    filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0));
 }
