--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -26,13 +26,12 @@
                 <!-- Modal content-->
                 <div class="modal-content">
                     <div class="header">
-                        <h2 class="modal-title">Cookies information</h2>
-                        <p>By clicking ACCEPT, you are agreeing with the cookie
-                            <a href="/cookieTermsAndConditionsDanish" id="cookieTerms" target="_blank">terms and
-                                conditions</a>
-                            of this page.</p>
+                        <h2 class="modal-title"><span th:text="#{cookie.title}"></span></h2>
+                        <span th:text="#{cookie.text}"></span>
+                        <a href="/cookieTermsAndConditionsDanish" id="cookieTerms" target="_blank"><span th:text="#{cookie.link}"></span></a>
+                        <span th:text="#{cookie.text.two}"></span>
                     </div>
-                    <button type="button" onclick="acceptCookies()" id="acceptCookiesButton">I ACCEPT</button>
+                    <button type="button" onclick="acceptCookies()" id="acceptCookiesButton"><span th:text="#{cookie.accept}"></span></button>
                 </div>
             </div>
         </div>
@@ -126,11 +125,11 @@
                 <a style="margin-left:25px;" href="/productExample"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
                                                alt="treecreate" id="treecreateLogo" class="filterColor">
                 </a>
-                <a target="popup" onclick="window.open('https://www.facebook.com/treecreate.dk', 'name')">
+                <a target="popup" onclick="window.open('https://www.facebook.com/treecreate.dk', 'name')" style="padding:0 10px;">
                     <img th:src="@{~/img/logos/facebookBlackLogo.svg}" alt="facebook" id="facebookIcon"
                          class="icon filterColor">
                 </a>
-                <a target="popup" onclick="window.open('https://www.instagram.com/treecreate.dk/','names')">
+                <a target="popup" onclick="window.open('https://www.instagram.com/treecreate.dk/','names')" style="padding:0 10px;">
                     <img th:src="@{~/img/logos/instagramBlackLogo.svg}" alt="instagram" id="instagramIcon"
                          class="icon filterColor">
                 </a>
