--- a/src/main/resources/templates/profile/orders.html
+++ b/src/main/resources/templates/profile/orders.html
@@ -9,6 +9,8 @@
     <link th:href="@{/styles/productFooter.css}" rel="stylesheet">
     <link th:href="@{/styles/profile.css}" rel="stylesheet">
     <link th:href="@{/styles/orders.css}" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/basket.js}"></script>
     <script th:src="@{/js/orders.js}"></script>
