--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -189,7 +189,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                             </div>
                         </div>
                         <div class="fancyContent">
-                            <input type="text" class="fancyInput" id="bannerTextInput" placeholder="familietræ"
+                            <input type="text" class="fancyInput" id="bannerTextInput" th:placeholder="#{familyTree.familyTree}"
                                    maxlength="15">
                         </div>
                     </div>
