--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -24,7 +24,7 @@
         <div class="modal fade" id="cookiePromptModal" role="dialog">
             <div class="modal-dialog">
                 <!-- Modal content-->
-                <div class="modal-content">
+                <div class="modal-content cookiePrompt">
                     <div class="header">
                         <h2 class="modal-title"><span th:text="#{cookie.title}"></span></h2>
                         <span th:text="#{cookie.text}"></span>
