--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -143,7 +143,7 @@
                     <span th:text="#{navbar.products}"></span>
                     <hr class="hoverLine">
                 </a>
-                <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.svg}" alt="basket"
+                <a href="/account/collections"><img th:src="@{~/img/icons/shoppingBasketIcon.svg}" alt="basket"
                                                id="shoppingBasketIcon" class="icon filterColor">
                     <span id="basketNavbarText"> (0) </span><span th:text=" #{navbar.items}"></span>
                     <hr class="hoverLine">
