--- a/src/main/resources/templates/profile/orders.html
+++ b/src/main/resources/templates/profile/orders.html
@@ -51,11 +51,15 @@
                     <span class="orderDateCreated orderInfo">Created on: N/A</span>
                     <span class="orderExpectedDelivery orderInfo">Expected Delivery Date: N/A</span>
                 </div>
-                <div class="orderShipmentInfo orderInfo">
-                    <span class="orderTitle">Design:</span>
-                    <span class="orderOrdersDesign">name: N/A</span>
-                    <span class="orderOrdersSize">Size: N/A</span>
-                    <span class="orderOrdersAmount">Amount: N/A</span>
+                <div class="orderDesignInfo orderInfo">
+                    <span class="orderTitle">Designs:</span>
+                    <section class="orderDesignContainer">
+                        <span class="orderDesignName orderDesignEntry">N/A</span>
+                        <span class="orderDesignSize orderDesignEntry">XxX cm</span>
+                        <span class="orderDesignAmount orderDesignEntry">amount: N/A</span>
+                        <span class="orderDesignPrice orderDesignEntry">price: N/A</span>
+                        <input type="button" class="viewDesignBtn" onclick="viewDesign(this)" value="View">
+                    </section>
                 </div>
                 <div class="orderShipmentInfo orderInfo">
                     <span class="orderTitle">Delivery Address:</span>
