--- a/src/main/resources/static/styles/orders.css
+++ b/src/main/resources/static/styles/orders.css
@@ -28,6 +28,18 @@
     margin: 5px;
 }
 
+.orderDesignInfo
+{
+    min-width: 230px;
+    width: 60%;
+}
+
+.orderShipmentInfo
+{
+    min-width: 120px;
+    width: 35%;
+}
+
 .orderHeader
 {
     width: 100%;
@@ -68,4 +80,41 @@
     opacity: 0.8;
 
     order: 99;
+}
+
+.orderDesignContainer
+{
+    display: none;
+    flex-direction: row;
+    flex-flow: row wrap;
+    justify-content: space-between;
+
+    font-size: var(--fontSmall);
+
+    border: 1px var(--actionColor) solid;
+    border-radius: 12px;
+    padding: 5px;
+}
+
+.orderDesignEntry
+{
+    margin: 0 10px;
+}
+
+.viewDesignBtn
+{
+    align-self: flex-end;
+    min-width: 50px;
+    width: fit-content;
+    padding: 0 1vw;
+    background-color: var(--actionColor);
+    border-radius: 12px;
+    border: none;
+    color: white;
+}
+
+.viewDesignBtn:hover
+{
+    transform: scale(0.9);
+    box-shadow: none;
 }
